--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -6,19 +6,12 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2 # setup the repository in the runner
-      - name: Setup Node.js # setup Node.js in the runner
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: '12'
-      - uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
-       - run: npm ci # install dependencies
-       - run: npm run build --if-present # build the project
-      # - run: npm run test:unit # run the tests
+      - run: npm install
+      - run: npm test
       # deploy site to netlify using secrets created on repository
       - uses: netlify/actions/cli@master
       - uses: jsmrcaga/action-netlify-deploy@master
