--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           node-version: '12'
       - run: npm install
-      - run: npm test
+      #- run: npm test
       # deploy site to netlify using secrets created on repository
       - uses: netlify/actions/cli@master
       - uses: jsmrcaga/action-netlify-deploy@master
