--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -3,44 +3,25 @@ on:
   push:
     branches: [main] # run on pushes to main. was master in previous version
 jobs:
-  build:
-    runs-on: ubuntu-18.04
+  build-and-test:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      # ( Build to ./dist or other directory... )
-
-      - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v1.1
+      - uses: actions/setup-node@v2
         with:
-          publish-dir: './dist'
-          production-branch: main
-        #  github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: "Deploy from GitHub Actions"
-          enable-pull-request-comment: false
-          enable-commit-comment: true
-          overwrites-pull-request-comment: true
+          node-version: '12'
+      - run: npm install
+      # deploy site to netlify using secrets created on repository
+      - uses: jsmrcaga/action-netlify-deploy@master
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        timeout-minutes: 1
-
-  # build-and-test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: actions/setup-node@v2
-  #       with:
-  #         node-version: '12'
-  #     - run: npm install
-  #     # deploy site to netlify using secrets created on repository
-  #     - uses: jsmrcaga/action-netlify-deploy@master
-  #       env:
-  #         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-  #         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-  #       with:
-  #         args: deploy --dir=dist --prod
-  #         secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
+        with:
+          args: deploy --dir=dist --prod
+          build_directory: "./dist"
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          functions_directory: "/.netlify/functions"
   slackNotification:
     name: Slack Notification
     runs-on: ubuntu-latest
